webui/packaging/k8s/overlays/netcup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cb8
  namespace: cb8
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: books.sanjee.dev
      http:
        paths:
          - backend:
              service:
                name: cb8
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - books.sanjee.dev
      secretName: books-sanjee-dev-tls
